--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
 
     defaultConfig {
         applicationId "com.koustuvsinha.benchmarker"
-        minSdkVersion 15
+        minSdkVersion 18
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -50,4 +50,5 @@ dependencies {
     }
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
 }
