--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
 
 dependencies {
@@ -51,4 +55,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
+    compile 'io.codearte.jfairy:jfairy:0.4.3'
 }
