--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
             android:name=".views.DbTestingActivity"
             android:label="@string/title_activity_db_testing" >
         </activity>
+        <service
+            android:name=".services.DbTestRunnerService"
+            android:exported="false" />
     </application>
 
 </manifest>
