--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,10 @@ android {
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE'
+
     }
 }
 
@@ -55,5 +59,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
-    compile 'io.codearte.jfairy:jfairy:0.4.3'
+    compile 'org.fluttercode.datafactory:datafactory:0.8'
 }
