--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,5 @@ dependencies {
     compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'org.fluttercode.datafactory:datafactory:0.8'
     compile 'jp.wasabeef:recyclerview-animators:1.2.0@aar'
+    compile 'com.afollestad:material-dialogs:0.7.5.1'
 }
