--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,5 @@ dependencies {
     compile 'org.fluttercode.datafactory:datafactory:0.8'
     compile 'jp.wasabeef:recyclerview-animators:1.2.0@aar'
     compile 'com.afollestad:material-dialogs:0.7.5.1'
+    compile 'com.squareup:otto:1.3.7'
 }
