--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,5 @@ dependencies {
     compile 'jp.wasabeef:recyclerview-animators:1.2.0@aar'
     compile 'com.afollestad:material-dialogs:0.7.5.1'
     compile 'com.squareup:otto:1.3.7'
+    compile 'com.github.lzyzsd:circleprogress:1.1.0@aar'
 }
