--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,5 @@ dependencies {
     compile 'com.afollestad:material-dialogs:0.7.5.1'
     compile 'com.squareup:otto:1.3.7'
     compile 'com.github.lzyzsd:circleprogress:1.1.0@aar'
+    compile 'io.realm:realm-android:0.80.3'
 }
