--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,12 @@ buildscript {
     repositories {
         maven { url 'https://maven.fabric.io/public' }
         jcenter()
+        mavenCentral()
     }
 
     dependencies {
         classpath 'io.fabric.tools:gradle:1.+'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
     }
 }
 apply plugin: 'com.android.application'
@@ -13,6 +15,7 @@ apply plugin: 'io.fabric'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
+    maven { url "https://raw.github.com/Raizlabs/maven-releases/master/releases" }
 }
 
 
@@ -51,6 +54,9 @@ android {
     }
 }
 
+
+apply plugin: 'com.neenbedankt.android-apt'
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.1.1'
@@ -66,4 +72,7 @@ dependencies {
     compile 'com.squareup:otto:1.3.7'
     compile 'com.github.lzyzsd:circleprogress:1.1.0@aar'
     compile 'io.realm:realm-android:0.80.3'
+    apt 'com.raizlabs.android:DBFlow-Compiler:2.0.0'
+    compile "com.raizlabs.android:DBFlow-Core:2.0.0"
+    compile "com.raizlabs.android:DBFlow:2.0.0"
 }
