--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,4 +75,6 @@ dependencies {
     apt 'com.raizlabs.android:DBFlow-Compiler:2.0.0'
     compile "com.raizlabs.android:DBFlow-Core:2.0.0"
     compile "com.raizlabs.android:DBFlow:2.0.0"
+    compile 'com.snappydb:snappydb-lib:0.5.2'
+    compile 'com.esotericsoftware.kryo:kryo:2.24.0'
 }
