Add MPAndroidChart views

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,7 @@ apply plugin: 'io.fabric'
 repositories {
     maven { url 'https://maven.fabric.io/public' }
     maven { url "https://raw.github.com/Raizlabs/maven-releases/master/releases" }
+    maven { url "https://jitpack.io" }
 }
 
 
@@ -77,4 +78,5 @@ dependencies {
     compile "com.raizlabs.android:DBFlow:2.0.0"
     compile 'com.snappydb:snappydb-lib:0.5.2'
     compile 'com.esotericsoftware.kryo:kryo:2.24.0'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.1.0'
 }
