--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
             android:name=".views.DbTestingActivity"
             android:label="@string/title_activity_db_testing" >
         </activity>
+        <activity
+            android:name=".views.DbGraphActivity"
+            android:label="@string/title_activity_db_testing" >
+        </activity>
         <service
             android:name=".services.DbTestRunnerService"
             android:exported="false" />
