--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
+    compile 'com.getbase:floatingactionbutton:1.9.1'
     compile 'org.fluttercode.datafactory:datafactory:0.8'
     compile 'jp.wasabeef:recyclerview-animators:1.2.0@aar'
     compile 'com.afollestad:material-dialogs:0.7.5.1'
