Add CouchbaseLite tests, but with broken update #19

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ repositories {
     maven { url 'https://maven.fabric.io/public' }
     maven { url "https://raw.github.com/Raizlabs/maven-releases/master/releases" }
     maven { url "https://jitpack.io" }
+    maven { url "http://files.couchbase.com/maven2/" }
 }
 
 
@@ -51,6 +52,7 @@ android {
         exclude 'META-INF/DEPENDENCIES'
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
+        exclude 'META-INF/ASL2.0'
 
     }
 }
@@ -79,4 +81,5 @@ dependencies {
     compile 'com.snappydb:snappydb-lib:0.5.2'
     compile 'com.esotericsoftware.kryo:kryo:2.24.0'
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.0'
+    compile 'com.couchbase.lite:couchbase-lite-android:1.1.0'
 }
