--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         </activity>
         <activity
             android:name=".views.DbTestingActivity"
-            android:label="@string/title_activity_db_testing" >
+            android:label="@string/title_activity_db_testing"
+            android:configChanges="orientation|screenSize">
         </activity>
         <activity
             android:name=".views.DbGraphActivity"
