--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,9 @@
         <service
             android:name=".services.DbTestRunnerService"
             android:exported="false" />
+        <meta-data
+            android:name="com.crashlytics.ApiKey"
+            android:value="46bc9d79d134d135a207ce90633921b296ced28d" />
     </application>
 
 </manifest>
